add cash-boxes crud
