# src/domain/entities/movement.entity.ts
@@ -1,51 +1,73 @@
 import { CosmosDateTime, CosmosPartitionKey } from '@nestjs/azure-database';
+import { CashFlowType } from './cash-box.entity';
 import { Product } from './product.entity';
 
 export enum MovementType {
-    IN = 'IN',
-    OUT = 'OUT',
-    TRANSFER = 'TRANSFER',
-    SALE = 'SALE',
-    RETURN = 'RETURN',
-    ADJUST = 'ADJUST',
-    INVENTORY = 'INVENTORY',
-    PURCHASE = 'PURCHASE',
+    SALE = 'sale',
+    PURCHASE = 'purchase',
+    CASH_BOX = 'cash_box',
 }
 
-export enum PaymentMethod{
-    CASH = 'CASH',
-    CREDIT = 'CREDIT',
-    DEBIT = 'DEBIT',
-    TRANSFER = 'TRANSFER'
+export enum PaymentMethod {
+    CASH = 'cash',
+    CREDIT = 'credit',
+    DEBIT = 'debit',
+    TRANSFER = 'transfer'
 }
 
-export interface SaleData{
+export interface SaleData {
     customerId: string;
     paymentMethod: PaymentMethod;
     total: number;
+    items: SaleItem[];
 }
 
-export interface PurchaseData{
+export interface PurchaseData {
     supplierId: string;
     paymentMethod: PaymentMethod;
     total: number;
+    items: PurchaseItem[];
 }
 
-export interface Item {
+export interface CashBoxMovementData {
+    items: CashBoxMovementItem[];
+    total: number;
+}
+
+export interface SaleItem {
     id: string;
     productId: string;
     quantity: number;
     salePrice: number;
-    product?: Partial<Product>; 
+    product?: Partial<Product>;
 }
+export interface PurchaseItem {
+    id: string;
+    productId: string;
+    quantity: number;
+    purchasePrice: number;
+    product?: Partial<Product>;
+}
+
+export interface CashBoxMovementItem {
+    id: string;
+    amount: number;
+    type: CashFlowType;
+    paymentConceptId: string;
+    remarks?: string;
+    createdAt: Date;
+    updatedAt?: Date;
+    deletedAt?: Date;
+}
+
 @CosmosPartitionKey('subsidiaryId')
 export class Movement {
     id?: string;
     type: MovementType;
     subsidiaryId: string;
-    items: Item[];
-    userId: string;
-    data?: SaleData | PurchaseData;
+    createdById: string;
+    data?: SaleData | PurchaseData | CashBoxMovementData;
+    parentId?: string;
     remarks?: string;
     @CosmosDateTime() createdAt: Date;
     @CosmosDateTime() updatedAt?: Date;
